Face-rec-update

--- a/.README.md
+++ b/.README.md
@@ -28,7 +28,7 @@ Add, edit, delete stops and manage the default route for each bus.
 Raspberry Pi Monitoring
 Each bus has a Pi + camera module.
 Vision feed + attendance are streamed to Firebase using ngrok.
-Admin can monitor the live feed from the dashboard.
+Admin can monitor the live feed from the dashboard.(https://github.com/SRee1721/ssn-face-collector.git)
 
 Attendance Reports
 Download individual and bus-wise attendance logs for any date.
